# zik_zak

./: .gitignore  LAUNCH_CHECKLIST.md  README.md  SLED_INTEGRATION.md  SUPABASE_COMPARISON.md  SUPABASE_KILLER.md  demo_vs_supabase.sh  hacker-news-post.md  twitter-destruction.md
annihilation/supabase/: DESTRUCTION_REPORT.md  README.md  SECURITY_REVOLUTION.md  TEXT_REVOLUTION_GUIDE.md  annihilate_supabase.sh  security_revolution_demo.sh  text_limits_demo.sh  text_revolution_demo.sh
docs/: id_generation.md
examples/: ecommerce-supabase-killer.md  prisma-destroyer.md
supabase_killer/: .gitignore  Cargo.toml
supabase_killer/src/: auth.rs  database.rs  main.rs  realtime.rs  storage.rs
zik_zak/: .gitignore  Cargo.toml  Dockerfile  INTEGRATION_COMPLETE.md  MISSION_COMPLETE.md  README.md  check_recipes.py  divine_sparks.json  recipes.json  run_tests.sh  test_realistic_product.py  test_server.sh  text_comments_recipes.json
zik_zak/examples/: divine_genesis.rs
zik_zak/src/: accounting.rs  genesis.rs  lib.rs  main.rs  recipes.rs  sled.rs  sparks.rs  tigerbeetle_client.rs  zik_zak.rs
zik_zak/tests/: simple_concepts_test.rs  test_id_uniqueness.rs  tigerbeetle_integration_test.rs
zik_zak_mcp/: README.md  demo.js  recipes.json
zik_zak_mcp/mcp-server/: package-lock.json  package.json  server.js
