[package]
name = "supabase_killer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supabase_killer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "1.0", features = ["full"] }
futures = "0.3"
regex = "1.0"
base64 = "0.22"

# ZIK_ZAK core engine
zik_zak = { path = "../zik_zak" }